# ProtoplugSupportSIMD

./: CMakeLists.txt  example.lua  main.c  readme.md  vector_add.c  vector_add_ffi.lua  vector_simd.lua  vector_simde_avx2.c  vector_simde_avx2.cpp
